# muxai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: go-ci.yml  go-release.yml  python-ci.yml  python-release.yml  repo-quality.yml  rust-ci.yml  rust-release.yml  typescript-ci.yml  typescript-release.yml
docs/: architecture.md  parity-matrix.md  providers.md
sdk/go/: CHANGELOG.md  README.md  go.mod
sdk/go/pkg/muxai/: client.go  client_test.go  command_runner.go  command_runner_test.go  errors.go  errors_test.go  prompt.go  prompt_test.go  provider.go  retry.go  retry_test.go  types.go
sdk/go/pkg/muxai/providers/claude/: provider.go  (+1 more)
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/src/muxai/: __init__.py  client.py  errors.py  provider.py  types.py
sdk/python/src/muxai/providers/: __init__.py  base.py  claude.py  cursor.py  vibe.py
sdk/python/tests/: test_client.py  test_providers.py
sdk/rust/: CHANGELOG.md  Cargo.toml  README.md
sdk/rust/src/: client.rs  errors.rs  lib.rs  provider.rs  types.rs
sdk/typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.test.ts  client.ts  errors.ts  index.ts  provider.ts  types.ts
sdk/typescript/src/providers/: base.test.ts  base.ts  claude.ts  cursor.ts  index.ts  vibe.ts
(+4 files in other folders)
